# hive-ddl-parser

./: Cargo.toml  README.md
src/: ddl.rs  hive_ddl.pest  lib.rs  main.rs  parser.rs  python.rs
src/ddl/: create_table.rs  select.rs
